--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/BIV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.sqljdbc4.jar=C:\\Info\\SCO\\sqljdbc_4.1\\enu\\sqljdbc4.jar
+file.reference.sqljdbc4.jar=jdbc\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
