--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/BIV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqljdbc4.jar=jdbc\\sqljdbc4.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
