--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/BIV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=C:\\DOWNLOAD\\jdatechooser\\DateChooser.jar
 file.reference.sqljdbc4.jar=jdbc\\sqljdbc4.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 8.0.1\\ide\\modules\\ext\\swingx-all-1.6.4.jar
@@ -35,7 +36,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar-1}
+    ${file.reference.swingx-all-1.6.4.jar-1}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
